[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive", "cargo"] }
rand = "0.8.5"
libafl = "*"
libafl_bolts = "0.12.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[features]
panic = []